Added art ratios, attributes, weapon stability. Tested damage formula further

--- a/index.html
+++ b/index.html
@@ -128,20 +128,29 @@
                         <div class="buffIcon"><img src="img\statuses\fields\defender.png" data-toggle="tooltip" data-placement="top" title="Defender" alt="Defender"></div>
                     </div>
                 </div>
+                <div id="damageNumbers">
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
+                </div>
                 <div id="equipment">
                     <div id="gems">
-                        <div class= "gemContainer">
-                            <h1 class= "info-text-3 gem-text">None</h1>
+                        <div class="gemContainer">
+                            <h1 class="info-text-3 gem-text">None</h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
                             <span class="gem-remove" id="gem-1-remove">&times;</span>
                         </div>
-                        <div class= "gemContainer">
-                            <h1 class= "info-text-3 gem-text">None</h1>
+                        <div class="gemContainer">
+                            <h1 class="info-text-3 gem-text">None</h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
                             <span class="gem-remove" id="gem-2-remove">&times;</span>
                         </div>
-                        <div class= "gemContainer">
-                            <h1 class= "info-text-3 gem-text">None</h1>
+                        <div class="gemContainer">
+                            <h1 class="info-text-3 gem-text">None</h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
                             <span class="gem-remove" id="gem-3-remove">&times;</span>
                         </div>
