Added formulas for additive stat increases

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
         <script src="src/arts.js"></script>
         <script src="src/classes.js"></script>
         <script src="src/equipment.js"></script>
+        <script src="src/additives.js"></script>
         <script src="src/damage.js"></script>
         <script src="src/index.js"></script>
 
