--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
         <script src="src/classes.js"></script>
         <script src="src/equipment.js"></script>
         <script src="src/additives.js"></script>
+        <script src="src/multipliers.js"></script>
         <script src="src/damage.js"></script>
         <script src="src/index.js"></script>
 
