Added damage multiplier formula

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
         <script src="src/equipment.js"></script>
         <script src="src/additives.js"></script>
         <script src="src/multipliers.js"></script>
+        <script src="src/multipliersDamage.js"></script>
         <script src="src/damage.js"></script>
         <script src="src/index.js"></script>
 
