--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
                         <div class="buffIcon"><img src="img\statuses\debuffs\accuracy-down.png" data-toggle="tooltip" data-placement="top" title="Accuracy Down" alt="Accuracy Down"></div>
                         <div class="buffIcon"><img src="img\statuses\debuffs\evasion-down.png" data-toggle="tooltip" data-placement="top" title="Evasion Down" alt="Evasion Down"></div>
                         <div class="buffIcon"><img src="img\statuses\debuffs\reduce-all.png" data-toggle="tooltip" data-placement="top" title="Reduce All" alt="Reduce All"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\break.png" data-toggle="tooltip" data-placement="top" title="Break" alt="Break"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\topple.png" data-toggle="tooltip" data-placement="top" title="Topple" alt="Topple"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\launch.png" data-toggle="tooltip" data-placement="top" title="Launch" alt="Launch"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\daze.png" data-toggle="tooltip" data-placement="top" title="Daze" alt="Daze"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\smash.png" data-toggle="tooltip" data-placement="top" title="Smash" alt="Smash"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\burst.png" data-toggle="tooltip" data-placement="top" title="Burst" alt="Burst"></div>
                     </div>
                     <h1 class="info-text-3">Fields</h1>
                     <div class="buffs">
@@ -129,6 +135,7 @@
                     </div>
                 </div>
                 <div id="damageNumbers">
+                    <h1 class="damage-text">None</h1>
                     <h1 class="damage-text">None</h1>
                     <h1 class="damage-text">None</h1>
                     <h1 class="damage-text">None</h1>
