--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
         <script src="src/arts.js"></script>
         <script src="src/classes.js"></script>
         <script src="src/equipment.js"></script>
+        <script src="src/buffs.js"></script>
         <script src="src/additives.js"></script>
         <script src="src/multipliers.js"></script>
         <script src="src/multipliersDamage.js"></script>
