Added formula for individual arts damage multipliers

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
                     </div>
                     <h1 class="info-text-3">Enemy Combo</h1>
                     <div class="buffs">
-                        <div class="reactionIcon" id="breakEnemy"><img src="img\statuses\debuffs\break.png" data-toggle="tooltip" data-placement="top" title="Break" alt="Break"></div>
-                        <div class="reactionIcon" id="toppleEnemy"><img src="img\statuses\debuffs\topple.png" data-toggle="tooltip" data-placement="top" title="Topple" alt="Topple"></div>
-                        <div class="reactionIcon" id="launchEnemy"><img src="img\statuses\debuffs\launch.png" data-toggle="tooltip" data-placement="top" title="Launch" alt="Launch"></div>
-                        <div class="reactionIcon" id="dazeEnemy"><img src="img\statuses\debuffs\daze.png" data-toggle="tooltip" data-placement="top" title="Daze" alt="Daze"></div>
-                        <div class="reactionIcon" id="smashEnemy"><img src="img\statuses\debuffs\smash.png" data-toggle="tooltip" data-placement="top" title="Smash" alt="Smash"></div>
-                        <div class="reactionIcon" id="burstEnemy"><img src="img\statuses\debuffs\burst.png" data-toggle="tooltip" data-placement="top" title="Burst" alt="Burst"></div>
+                        <div class="buffIcon reactionIcon" id="breakEnemy"><img src="img\statuses\debuffs\break.png" data-toggle="tooltip" data-placement="top" title="Break" alt="Break"></div>
+                        <div class="buffIcon reactionIcon" id="toppleEnemy"><img src="img\statuses\debuffs\topple.png" data-toggle="tooltip" data-placement="top" title="Topple" alt="Topple"></div>
+                        <div class="buffIcon reactionIcon" id="launchEnemy"><img src="img\statuses\debuffs\launch.png" data-toggle="tooltip" data-placement="top" title="Launch" alt="Launch"></div>
+                        <div class="buffIcon reactionIcon" id="dazeEnemy"><img src="img\statuses\debuffs\daze.png" data-toggle="tooltip" data-placement="top" title="Daze" alt="Daze"></div>
+                        <div class="buffIcon reactionIcon" id="smashEnemy"><img src="img\statuses\debuffs\smash.png" data-toggle="tooltip" data-placement="top" title="Smash" alt="Smash"></div>
+                        <div class="buffIcon reactionIcon" id="burstEnemy"><img src="img\statuses\debuffs\burst.png" data-toggle="tooltip" data-placement="top" title="Burst" alt="Burst"></div>
                     </div>
                     <h1 class="info-text-3">Fields</h1>
                     <div class="buffs">
@@ -135,6 +135,17 @@
                         <div class="buffIcon"><img src="img\statuses\fields\up.png" data-toggle="tooltip" data-placement="top" title="Armor Veil" alt="Armor Veil"></div>
                         <div class="buffIcon"><img src="img\statuses\fields\art-follow-up.png" data-toggle="tooltip" data-placement="top" title="Art Follow-Up" alt="Art Follow-Up"></div>
                         <div class="buffIcon"><img src="img\statuses\fields\defender.png" data-toggle="tooltip" data-placement="top" title="Defender" alt="Defender"></div>
+                    </div>
+                    <h1 class="info-text-3">Enemy Type</h1>
+                    <div class="buffs">
+                        <div class="buffIcon typeIcon" id="enemyTerrestrial"><img src="img\statuses\types\enemy-terrestrial.png" data-toggle="tooltip" data-placement="top" title="Terrestrial" alt="Terrestrial"></div>
+                        <div class="buffIcon typeIcon" id="enemyAquatic"><img src="img\statuses\types\enemy-aquatic.png" data-toggle="tooltip" data-placement="top" title="Aquatic" alt="Aquatic"></div>
+                        <div class="buffIcon typeIcon" id="enemyAerial"><img src="img\statuses\types\enemy-aerial.png" data-toggle="tooltip" data-placement="top" title="Aerial" alt="Aerial"></div>
+                        <div class="buffIcon typeIcon" id="enemyKeves"><img src="img\statuses\types\enemy-keves.png" data-toggle="tooltip" data-placement="top" title="Keves" alt="Keves"></div>
+                        <div class="buffIcon typeIcon" id="enemyAgnus"><img src="img\statuses\types\enemy-agnus.png" data-toggle="tooltip" data-placement="top" title="Agnus" alt="Agnus"></div>
+                        <div class="buffIcon typeIcon" id="enemyLostNumbers"><img src="img\statuses\types\enemy-lost-numbers.png" data-toggle="tooltip" data-placement="top" title="Lost Numbers" alt="Lost Numbers"></div>
+                        <div class="buffIcon typeIcon" id="enemyMachines"><img src="img\statuses\types\enemy-machines.png" data-toggle="tooltip" data-placement="top" title="Machines" alt="Machines"></div>
+                        <div class="buffIcon typeIcon" id="enemyMoebius"><img src="img\statuses\types\enemy-moebius.png" data-toggle="tooltip" data-placement="top" title="Moebius" alt="Moebius"></div>
                     </div>
                     <h1 class="info-text-3">Enemy Defenses</h1>
                     <div class="number-fields">
