Added formulas for fusion arts

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
                     <h1 class="damage-text">None</h1>
                     <h1 class="damage-text">None</h1>
                     <h1 class="damage-text">None</h1>
+
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
+                    <h1 class="damage-text">None</h1>
                 </div>
                 <div id="equipment">
                     <div id="gems">
