--- a/index.html
+++ b/index.html
@@ -165,6 +165,23 @@
                         <h1 class="info-text-3 smaller-text">Cancel: </h1>
                         <div class="buffIcon" id="cancel"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Canceled?" alt="Cancel"></div>
                     </div>
+                    <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">Blocked: </h1>
+                        <div class="buffIcon" id="enemyBlocked"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Blocked?" alt="Blocked"></div>
+                    </div>
+                    <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">First 30 Seconds: </h1>
+                        <div class="buffIcon" id="first30seconds"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="First 30 Seconds?" alt="First 30 Seconds"></div>
+                    </div>
+                    <h1 class="info-text-3">Incrementals</h1>
+                    <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">Chain Attack Multiplier: </h1>
+                        <input class="number-input" type="number" id="chain-attack-multiplier" min="100" max="9999" value="100" oninput="recalculate()">
+                    </div>
+                    <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">Talent Arts Used: </h1>
+                        <input class="number-input" type="number" id="used-talents" min="0" max="99" value="0" oninput="recalculate()">
+                    </div>
                 </div>
                 <div id="damageNumbers">
                     <h1 class="damage-text">None</h1>
