Added more art info + Smash damage formula

--- a/index.html
+++ b/index.html
@@ -296,6 +296,10 @@
                         <h1 class="info-text-3 smaller-text">Number of Enemies: </h1>
                         <input class="number-input" type="number" id="enemies-total" min="0" max="99" value="0" oninput="recalculate()">
                     </div>
+                    <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">Launch Time Remaining (Frames): </h1>
+                        <input class="number-input" type="number" id="launch-time" min="0" max="99" value="0" oninput="recalculate()">
+                    </div>
                 </div>
                 <div id="damageNumbers">
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
