--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
                     </div>
                     <h1 class="info-text-3">Incrementals</h1>
                     <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">Player HP Remaining (%): </h1>
+                        <input class="number-input" type="number" id="current-hp-player" min="1" max="100" value="100" oninput="recalculate()">
+                    </div>
+                    <div class="horizontal-fields">
                         <h1 class="info-text-3 smaller-text">Chain Attack Multiplier: </h1>
                         <input class="number-input" type="number" id="chain-attack-multiplier" min="100" max="9999" value="100" oninput="recalculate()">
                     </div>
