Added positional checks. Added Quickdraw bug

--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                         <div class="buffIcon typeIcon" id="enemyMachines"><img src="img\statuses\types\enemy-machines.png" data-toggle="tooltip" data-placement="top" title="Machines" alt="Machines"></div>
                         <div class="buffIcon typeIcon" id="enemyMoebius"><img src="img\statuses\types\enemy-moebius.png" data-toggle="tooltip" data-placement="top" title="Moebius" alt="Moebius"></div>
                     </div>
+                    <h1 class="info-text-3">Position</h1>
+                    <div class="buffs">
+                        <div class="buffIcon positionIcon" id="positionFront"><img src="img\statuses\position-front.png" data-toggle="tooltip" data-placement="top" title="Front" alt="Front"></div>
+                        <div class="buffIcon positionIcon" id="positionSide"><img src="img\statuses\position-side.png" data-toggle="tooltip" data-placement="top" title="Side" alt="Side"></div>
+                        <div class="buffIcon positionIcon" id="positionBack"><img src="img\statuses\position-back.png" data-toggle="tooltip" data-placement="top" title="Back" alt="Back"></div>
+                    </div>
                     <h1 class="info-text-3">Enemy Defenses</h1>
                     <div class="horizontal-fields">
                         <h1 class="info-text-3 smaller-text">Physical Defense: </h1>
