--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <div class="buffIcon positionIcon" id="positionSide"><img src="img\statuses\position-side.png" data-toggle="tooltip" data-placement="top" title="Side" alt="Side"></div>
                         <div class="buffIcon positionIcon" id="positionBack"><img src="img\statuses\position-back.png" data-toggle="tooltip" data-placement="top" title="Back" alt="Back"></div>
                     </div>
-                    <h1 class="info-text-3">Enemy Defenses</h1>
+                    <h1 class="info-text-3">Enemy Attributes</h1>
                     <div class="horizontal-fields">
                         <h1 class="info-text-3 smaller-text">Physical Defense: </h1>
                         <input class="number-input" type="number" id="enemy-physical-defense" min="-100" max="100" value="0" oninput="recalculate()">
@@ -251,6 +251,10 @@
                     <div class="horizontal-fields">
                         <h1 class="info-text-3 smaller-text">Ether Defense: </h1>
                         <input class="number-input" type="number" id="enemy-ether-defense" min="-100" max="100" value="0" oninput="recalculate()">
+                    </div>
+                    <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">Level: </h1>
+                        <input class="number-input" type="number" id="enemy-level" min="1" max="200" value="99" oninput="recalculate()">
                     </div>
                     <h1 class="info-text-3">Checks</h1>
                     <div class="horizontal-fields">
