--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@
                         <input class="number-input" type="number" id="enemies-total" min="0" max="99" value="0" oninput="recalculate()">
                     </div>
                     <div class="horizontal-fields">
+                        <h1 class="info-text-3 smaller-text">Soul Hacks: </h1>
+                        <input class="number-input" type="number" id="soul-hacks" min="3" max="128" value="3" oninput="recalculate()">
+                    </div>
+                    <div class="horizontal-fields">
                         <h1 class="info-text-3 smaller-text">Launch Time Remaining (Frames): </h1>
                         <input class="number-input" type="number" id="launch-time" min="0" max="99" value="0" oninput="recalculate()">
                     </div>
