Added checks and calculations for upgraded weapons

--- a/index.html
+++ b/index.html
@@ -555,9 +555,9 @@
                             <p class="info-text-1">Rank: 20</p>
                         </div>
                     </div>
-                    <div id="characterLevel">
-                        <h1 class="info-text-1">Level:</h1>
-                        <h1 id="level" class="info-text-1">99</h1>
+                    <div class="horizontal-fields">
+                        <h1 class="info-text-3">Upgraded: </h1>
+                        <div class="buffIcon" id="weaponUpgrade"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Weapon Upgraded?" alt="Weapon Upgrade Check"></div>
                     </div>
                 </div>
                 <div id="skills">
