Added button for manual damage calculation

--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@
                     </div>
                 </div>
                 <div id="damageNumbers">
+                    <span id="calc-button" class="calc-button badge badge-success">Calculate</span>
+
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
 
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
