Added loading icon and fade to Calculate button

--- a/index.html
+++ b/index.html
@@ -467,7 +467,12 @@
                     </div>
                 </div>
                 <div id="damageNumbers">
-                    <span id="calc-button" class="calc-button badge badge-success">Calculate</span>
+                    <span id="calc-button" class="calc-button badge badge-success">
+                        <div id="loadingIcon" class="spinner-border text-light" style="width: 1.5rem; height: 1.5rem; display: none;" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                        Calculate
+                    </span>
 
                     <h1 class="damage-text">None <span class="badge badge-pill badge-warning">0</span></h1>
 
