Created a working mobile page format

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div id="statuses">
-                    <div class="horizontal-fields">
+                    <div id="level-select" class="horizontal-fields">
                         <h1 class="info-text-3 smaller-text">Player Level: </h1>
                         <input class="number-input" type="number" id="player-level" min="1" max="99" value="99" oninput="recalculate()">
                     </div>
