Added gem descriptions for mobile format

--- a/index.html
+++ b/index.html
@@ -496,16 +496,19 @@
                     <div id="gems">
                         <div class="gemContainer">
                             <h1 class="info-text-3 gem-text">None</h1>
+                            <h1 class="info-text-3 gem-description"></h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
                             <span class="gem-remove" id="gem-1-remove">&times;</span>
                         </div>
                         <div class="gemContainer">
                             <h1 class="info-text-3 gem-text">None</h1>
+                            <h1 class="info-text-3 gem-description"></h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
                             <span class="gem-remove" id="gem-2-remove">&times;</span>
                         </div>
                         <div class="gemContainer">
                             <h1 class="info-text-3 gem-text">None</h1>
+                            <h1 class="info-text-3 gem-description"></h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
                             <span class="gem-remove" id="gem-3-remove">&times;</span>
                         </div>
