Increased size + visibility of elements + text in mobile format

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <div class="icon" id="buttonLanzOuroboros" data-toggle="tooltip" data-placement="bottom" title="Lanz (Ouroboros)"><img src="img\party\ouroboros\LanzOuroborosParty.png" alt="Icon 5"></div>
                     <div class="icon" id="buttonSenaOuroboros" data-toggle="tooltip" data-placement="bottom" title="Sena (Ouroboros)"><img src="img\party\ouroboros\SenaOuroborosParty.png" alt="Icon 6"></div>
                 </div>
+                <h1 class="info-text-3" id="current-character-name">Noah</h1>
             </section>
             <section id="center">
                 <div id="characterPortrait">
