Adjusted mobile party header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section id="statCalculator">
             <section id="party">
                 <div id="characters">
-                    <div class="icon" id="buttonNoah" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Noah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
+                    <div class="icon icon-highlight" id="buttonNoah" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Noah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
                     <div class="icon" id="buttonMio" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Mio"><img src="img\party\MioParty.png" alt="Icon 2"></div>
                     <div class="icon" id="buttonEunie" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Eunie"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
                     <div class="icon" id="buttonTaion" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Taion"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
