Improved scaling & responsiveness across both desktop & mobile

--- a/index.html
+++ b/index.html
@@ -526,14 +526,17 @@
                     <div id="accessories">
                         <div class="accessory-container">
                             <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 1"></div>
+                            <h1 class="info-text-3 accessory-description"></h1>
                             <span class="accessory-remove" id="accessory-1-remove">&times;</span>
                         </div>
                         <div class="accessory-container">
                             <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 2"></div>
+                            <h1 class="info-text-3 accessory-description"></h1>
                             <span class="accessory-remove" id="accessory-2-remove">&times;</span>
                         </div>
                         <div class="accessory-container">
                             <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 3"></div>
+                            <h1 class="info-text-3 accessory-description"></h1>
                             <span class="accessory-remove" id="accessory-3-remove">&times;</span>
                         </div>
                     </div>
