Improved scaling, positioning, and responsiveness of bottom section

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                             <p class="info-text-1">Rank: 20</p>
                         </div>
                     </div>
-                    <div class="horizontal-fields">
+                    <div class="horizontal-fields" id="upgrade-field">
                         <h1 class="info-text-3">Upgraded: </h1>
                         <div class="buffIcon" id="weaponUpgrade"><img src="img\statuses\check.png" data-toggle="tooltip" data-placement="top" title="Weapon Upgraded?" alt="Weapon Upgrade Check"></div>
                     </div>
